kustomize/history-node/overlays/kovan-gen5-rc1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: kovan-gen5-rc1-history
    networking.gke.io/managed-certificates: kovan-gen5-rc1-history
  name: kovan-gen5-rc1-history
  namespace: kovan-gen5-rc1
spec:
  rules:
    - host: kovan-gen5-rc1-history.optimism.io
      http:
        paths:
          - backend:
              service:
                name: l2geth-history
                port:
                  name: rpc
            path: /
            pathType: ImplementationSpecific
